--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
                             self.style.backgroundColor = 'red';
                         },100);
                         break;
+                    case 'target':
+                        setTimeout(function() {
+                            self.style.backgroundColor = 'blue';
+                        }, 300);
+                        break;
                     case 'bubbling':
                         setTimeout(function(){
                             self.style.backgroundColor = 'green';
